--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8">
     <title>Deluxe</title>
     <meta name="description" content="Deluxe">
-    <meta name="author" content="Steed Consulting"> 
+    <meta name="author" content="Steed Consulting">
 
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -49,7 +49,7 @@
     <div ng-include='"templates/footer.html"'></div>
 
     <!-- jquery
-    ================================================== --> 
+    ================================================== -->
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/jquery.flexslider-min.js"></script>
@@ -57,7 +57,7 @@
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.fittext.js"></script>
     <script src="js/jquery.placeholder.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>  
+    <script src="js/jquery.magnific-popup.min.js"></script>
 
     <!-- Vendor: Javascripts -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -71,6 +71,7 @@
     <script src="js/modernizr.js"></script>
     <script src="js/wow.js"></script>
     <script src="owl/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="js/carouselSwitcher.js"></script>
 
 </body>
 </html>
