Add Be Deluxe Modal

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 
 </head>
 
-<body ng-app="quiquiriqui">
+<body ng-app="deluxe.mx">
 
     <!--[if lt IE 7]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
